<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- iphone_14___15_pro___1 strings -->

    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="e_mail_or_username_string">E-mail or username</string>
    <string name="log_in_string">Log in</string>
    <string name="forgot_your_password__string">   Forgot your  password?</string>
    <string name="welcome_string">Welcome</string>
    <string name="please_log_in_to_access_your_account__string">please log in to access your account.</string>
    <string name="password_string">Password</string>
    <string name="or_continue_with_string">or continue with</string>
    <string name="google_string">Google</string>
    <string name="outlook_string">Outlook</string>
    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="request">REQUEST</string>
    <string name="title_activity_adminhomepage">Adminhomepage</string>
    <string name="details">Details</string>
    <string name="chat">Chat</string>
    <string name="detail">Detail</string>
    <string name="title_activity_mentarhome">mentarhome</string>
</resources>