<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		iphone_14___15_pro___1
	 *	@date 		Saturday 20th of April 2024 08:13:13 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/iphone_14___15_pro___1" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_iphone_14___15_pro___1_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="415dp"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__iphone_14___15_pro___1_ek2"
					android:background="@drawable/_bg__iphone_14___15_pro___1_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="411dp"
					android:layout_height="893dp" />

				<EditText   android:id="@+id/rectangle_2"
					android:background="@drawable/rectangle_2_shape"
					 android:layout_marginStart="39dp"
					android:layout_marginTop="316dp"
					android:hint="   Enter -mailId"
					android:layout_width="315dp"
					android:layout_height="56dp" />

				<EditText android:id="@+id/rectangle_3"
					android:background="@drawable/rectangle_3_shape"
					 android:layout_marginStart="39dp"
					android:layout_marginTop="405dp"
					android:layout_width="315dp"
					android:hint="    Password"
					android:layout_height="56dp" />

				<ImageButton  android:id="@+id/_rectangle_4"
					android:background="@drawable/_rectangle_4_shape"
					 android:alpha="0.88999998569489"
					 android:layout_marginStart="39dp"
					android:layout_marginTop="538dp"
					android:layout_width="315dp"
					android:layout_height="56dp" />

				<TextView android:id="@+id/log_in"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="22.86sp"
					android:textColor="@color/log_in_color"
					android:layout_marginLeft="144dp"
					android:layout_marginTop="550dp"
					android:layout_width="103dp"
					android:layout_height="38.33575630188dp"
					android:text="@string/log_in_string"
					 />

				<TextView android:id="@+id/forgot_your_password_"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="19.14sp"
					android:textColor="@color/log_in_color"
					android:layout_marginLeft="143dp"
					android:layout_marginTop="488dp"
					android:layout_width="215dp"
					android:layout_height="28.914129447937dp"
					android:text="@string/forgot_your_password__string"
					 />

				<TextView android:id="@+id/welcome"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="36sp"
					android:shadowRadius="4"
					android:shadowColor="#000000"
					android:shadowDx="0"
					android:shadowDy="4"
					android:textColor="@color/log_in_color"
					android:layout_marginLeft="8dp"
					android:layout_marginTop="228dp"
					android:layout_width="206dp"
					android:layout_height="51.6dp"
					android:text="@string/welcome_string"
					 />

				<TextView android:id="@+id/please_log_in_to_access_your_account_"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="21.41sp"
					android:textColor="@color/log_in_color"
					android:layout_marginLeft="35dp"
					android:layout_marginTop="269dp"
					android:layout_width="346.14110393524dp"
					android:layout_height="32.141103935242dp"
					android:text="@string/please_log_in_to_access_your_account__string"
					 />

							<ImageView android:id="@+id/line_1"
					android:src="@drawable/line_1"
					android:contentDescription="line_1"
					 android:layout_marginStart="38dp"
					android:layout_marginTop="645dp"
					android:layout_width="94dp"
					android:layout_height="1dp" />

				<ImageView android:id="@+id/line_2"
					android:src="@drawable/line_2"
					android:contentDescription="line_2"
					 android:layout_marginStart="259dp"
					android:layout_marginTop="645dp"
					android:layout_width="94dp"
					android:layout_height="1dp" />

				<TextView android:id="@+id/or_continue_with"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/log_in_color"
					android:layout_marginLeft="130dp"
					android:layout_marginTop="633dp"
					android:layout_width="125dp"
					android:layout_height="30.5dp"
					android:text="@string/or_continue_with_string"
					 />

				<View   android:id="@+id/rectangle_5"
					android:background="@drawable/rectangle_5_shape"
					 android:layout_marginStart="39dp"
					android:layout_marginTop="703dp"
					android:layout_width="140.46dp"
					android:layout_height="56dp" />

				<ImageView android:id="@+id/rectangle_6"
					android:src="@drawable/rectangle_6"
					android:contentDescription="rectangle_6"
					 android:layout_marginStart="208dp"
					android:layout_marginTop="703dp"
					android:layout_width="140.46dp"
					android:layout_height="56dp" />

				<ImageView android:id="@+id/google_logo"
					android:src="@drawable/google_logo"
					android:contentDescription="google_logo"
					 android:layout_marginStart="55dp"
					android:layout_marginTop="695dp"
					android:layout_width="34.69dp"
					android:layout_height="71dp" />

				<TextView android:id="@+id/google"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="19.73sp"
					android:textColor="@color/e_mail_or_username_color"
					android:layout_marginLeft="88dp"
					android:layout_marginTop="718dp"
					android:layout_width="84.042771835327dp"
					android:layout_height="31.972771835327dp"
					android:text="@string/google_string"
					 />

				<TextView android:id="@+id/outlook"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="19.73sp"
					android:textColor="@color/e_mail_or_username_color"
					android:layout_marginLeft="258dp"
					android:layout_marginTop="718dp"
					android:layout_width="84.042771835327dp"
					android:layout_height="31.972771835327dp"
					android:text="@string/outlook_string"
					 />

				<ImageView android:id="@+id/logo_outlook_34060_1"
					android:src="@drawable/logo_outlook_34060_1"
					android:contentDescription="logo_outlook_34060_1"
					 android:layout_marginStart="212dp"
					android:layout_marginTop="715dp"
					android:layout_width="48dp"
					android:layout_height="31dp" />


				<RelativeLayout android:id="@+id/graduation_cap"
					android:layout_marginTop="40dp"
					android:layout_marginStart="109dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__graduation_cap_ek1"
						android:background="@drawable/_bg__graduation_cap_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="90dp"
						android:layout_height="111.38dp" />

					<ImageView android:id="@+id/graduation_cap_container"
						android:src="@drawable/graduation_cap_container"
						android:contentDescription="graduation_cap_container"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="10dp"
						android:layout_width="90dp"
						android:layout_height="90dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/graduation_cap_ek2"
					android:layout_marginTop="49dp"
					android:layout_marginStart="106dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__graduation_cap_ek3"
						android:background="@drawable/_bg__graduation_cap_ek3_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="90dp"
						android:layout_height="90dp" />

					<ImageView android:id="@+id/graduation_cap_container_ek1"
						android:src="@drawable/graduation_cap_container_ek1"
						android:contentDescription="graduation_cap_container_ek1"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="10dp"
						android:layout_width="90dp"
						android:layout_height="90dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/graduation_cap_ek4"
					android:layout_marginTop="67dp"
					android:layout_marginStart="227dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__graduation_cap_ek5"
						android:background="@drawable/_bg__graduation_cap_ek5_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="87.69dp"
						android:layout_height="105.82dp" />

					<ImageView android:id="@+id/graduation_cap_container_ek2"
						android:src="@drawable/graduation_cap_container_ek2"
						android:contentDescription="graduation_cap_container_ek2"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="10dp"
						android:layout_width="87.690040588379dp"
						android:layout_height="90dp" />

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>